// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package.json exports support > should build app package for both web and native targets > native-optimized 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  "0": {
    "position": "relative",
    "flexDirection": "column",
    "gap": 18
  },
  "1": {
    "position": "relative",
    "flexDirection": "row",
    "width": "100%",
    "alignItems": "center",
    "gap": 18
  },
  "2": {
    "position": "relative",
    "flexDirection": "row",
    "width": "100%",
    "alignItems": "center",
    "gap": 18
  },
  "3": {
    "position": "relative",
    "flexDirection": "column",
    "zIndex": 10
  },
  "4": {
    "flexDirection": "column",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "bottom": 0,
    "alignItems": "center",
    "justifyContent": "center",
    "width": 44
  },
  "5": {
    "position": "relative",
    "flexDirection": "column",
    "zIndex": 10
  },
  "6": {
    "position": "relative",
    "flexDirection": "column",
    "flex": 1,
    "justifyContent": "center",
    "alignItems": "center",
    "gap": 46,
    "paddingTop": 18,
    "paddingRight": 18,
    "paddingBottom": 18,
    "paddingLeft": 18
  },
  "7": {
    "flexDirection": "row",
    "position": "absolute",
    "width": "100%",
    "top": 32,
    "gap": 32,
    "justifyContent": "center",
    "flexWrap": "wrap"
  },
  "8": {
    "top": 0,
    "position": "relative"
  },
  "9": {},
  "10": {
    "position": "relative",
    "flexDirection": "row",
    "gap": 7
  },
  "11": {
    "position": "relative",
    "flexDirection": "column",
    "gap": 18
  },
  "12": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 64.39999999999999,
    "lineHeight": 74.39999999999999,
    "marginTop": 0,
    "marginRight": 0,
    "marginBottom": 0,
    "marginLeft": 0,
    "textAlign": "center"
  },
  "13": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 14,
    "lineHeight": 24,
    "textAlign": "center"
  },
  "14": {
    "flexShrink": 0,
    "borderTopWidth": 0,
    "borderRightWidth": 0,
    "borderBottomWidth": 1,
    "borderLeftWidth": 0,
    "flex": 1,
    "height": 0,
    "maxHeight": 0,
    "borderStyle": "solid",
    "transform": [{
      "translateY": -0.5
    }]
  },
  "15": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 14,
    "lineHeight": 24,
    "textAlign": "center"
  },
  "16": {
    "flexShrink": 0,
    "borderTopWidth": 0,
    "borderRightWidth": 0,
    "borderBottomWidth": 1,
    "borderLeftWidth": 0,
    "flex": 1,
    "height": 0,
    "maxHeight": 0,
    "borderStyle": "solid",
    "transform": [{
      "translateY": -0.5
    }]
  },
  "17": {
    "position": "relative",
    "flexDirection": "row",
    "gap": 7
  },
  "18": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 14,
    "lineHeight": 24,
    "textAlign": "center"
  }
});
import { _withStableStyle } from '@tamagui/core';
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { Adapt, Anchor, Button, type FontSizeTokens, getFontSize, H1, Label, Paragraph, Select, type SelectProps, Separator, Sheet, toast, XStack, YStack } from '@my/ui';
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton';
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton';
import { LinearGradient } from '@tamagui/linear-gradient';
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons';
import React, { useState } from 'react';
import { Platform } from 'react-native';
import { useLink } from 'solito/navigation';
export function SelectDemo() {
  return <__ReactNativeView style={_sheet["0"]}>
      <__ReactNativeView style={_sheet["1"]}>
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__ReactNativeView>

      <__ReactNativeView style={_sheet["2"]}>
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__ReactNativeView>
    </__ReactNativeView>;
}
export function SelectDemoItem(props: SelectProps & {
  trigger?: React.ReactNode;
}) {
  const [val, setVal] = React.useState('apple');
  return <Select value={val} onValueChange={setVal} disablePreventBodyScroll {...props}>
      {props?.trigger || <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Frame>
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Frame>
          <Sheet.Overlay backgroundColor="$shadowColor" transition="lazy" enterStyle={{
          opacity: 0
        }} exitStyle={{
          opacity: 0
        }} />
        </Sheet>
      </Adapt>

      <Select.Content zIndex={200000}>
        <Select.ScrollUpButton items="center" justify="center" position="relative" width="100%" height="$3">
          <__ReactNativeView style={_sheet["3"]}>
            <ChevronUp size={20} />
          </__ReactNativeView>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['$background', 'transparent']} />
        </Select.ScrollUpButton>

        <Select.Viewport
      // to do animations:
      // transition="quick"
      // animateOnly={['transform', 'opacity']}
      // enterStyle={{ o: 0, y: -10 }}
      // exitStyle={{ o: 0, y: 10 }}
      minW={200}>
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(() => items.map((item, i) => {
            return <Select.Item index={i} key={item.name} value={item.name.toLowerCase()}>
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>;
          }), [items])}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && <__ReactNativeView pointerEvents={"none"} style={_sheet["4"]}>
              <ChevronDown size={getFontSize(props.size as FontSizeTokens ?? '$true')} />
            </__ReactNativeView>}
        </Select.Viewport>

        <Select.ScrollDownButton items="center" justify="center" position="relative" width="100%" height="$3">
          <__ReactNativeView style={_sheet["5"]}>
            <ChevronDown size={20} />
          </__ReactNativeView>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['transparent', '$background']} />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>;
}
const items = [{
  name: 'Apple'
}, {
  name: 'Pear'
}, {
  name: 'Blackberry'
}, {
  name: 'Peach'
}, {
  name: 'Apricot'
}, {
  name: 'Melon'
}, {
  name: 'Honeydew'
}, {
  name: 'Starfruit'
}, {
  name: 'Blueberry'
}, {
  name: 'Raspberry'
}, {
  name: 'Strawberry'
}, {
  name: 'Mango'
}, {
  name: 'Pineapple'
}, {
  name: 'Lime'
}, {
  name: 'Lemon'
}, {
  name: 'Coconut'
}, {
  name: 'Guava'
}, {
  name: 'Papaya'
}, {
  name: 'Orange'
}, {
  name: 'Grape'
}, {
  name: 'Jackfruit'
}, {
  name: 'Durian'
}];
export function HomeScreen({
  pagesMode = false
}: {
  pagesMode?: boolean;
}) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user';
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`
  });
  return <_ReactNativeViewStyled0>
      <_ReactNativeViewStyled1 _expressions={["sm"]}>
        {Platform.OS === 'web' && <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>}
      </_ReactNativeViewStyled1>

      <SelectDemo />

      <__ReactNativeView style={_sheet["10"]}>
        <Button size="$3" iconAfter={<Button.Icon>
              <Activity />
            </Button.Icon>}>
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__ReactNativeView>
      <__ReactNativeView style={_sheet["11"]}>
        <_ReactNativeTextStyled2>
          Welcome to Tamagui.
        </_ReactNativeTextStyled2>
        <_ReactNativeTextStyled3>
          Here's a basic starter to show navigating from one screen to another.
        </_ReactNativeTextStyled3>
        <_ReactNativeViewStyled4 />
        <_ReactNativeTextStyled5>
          This screen uses the same code on Next.js and React Native.
        </_ReactNativeTextStyled5>
        <_ReactNativeViewStyled6 />
      </__ReactNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </_ReactNativeViewStyled0>;
}
function SheetDemo() {
  const [open, setOpen] = useState(false);
  const [position, setPosition] = useState(0);
  return <>
      <Button size="$6" icon={open ? ChevronDown : ChevronUp} circular onPress={() => setOpen(x => !x)} />
      <Sheet modal transition="medium" open={open} onOpenChange={setOpen} snapPoints={[80]} position={position} onPositionChange={setPosition} dismissOnSnapToBottom>
        <Sheet.Overlay bg="$shadow4" transition="lazy" enterStyle={{
        opacity: 0
      }} exitStyle={{
        opacity: 0
      }} />
        <Sheet.Handle bg="$color8" />
        <Sheet.Frame items="center" justify="center" gap="$10" bg="$color2">
          <__ReactNativeView style={_sheet["17"]}>
            <_ReactNativeTextStyled7>Made by</_ReactNativeTextStyled7>
            <Anchor color="$blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor color="$blue10" href="https://github.com/tamagui/tamagui" target="_blank" rel="noreferrer">
              give it a ⭐️
            </Anchor>
          </__ReactNativeView>

          <Button size="$6" circular icon={ChevronDown} onPress={() => {
          setOpen(false);
          toast('Sheet closed!', {
            description: 'Just showing how toast works...'
          });
        }} />
        </Sheet.Frame>
      </Sheet>
    </>;
}
const _ReactNativeViewStyled0 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["6"], {
  "backgroundColor": theme.background.get()
}]);
const _ReactNativeViewStyled1 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["7"], _expressions[0] ? _sheet["8"] : _sheet["9"]]);
const _ReactNativeTextStyled2 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["12"], {
  "color": theme.color12.get()
}]);
const _ReactNativeTextStyled3 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["13"], {
  "color": theme.color10.get()
}]);
const _ReactNativeViewStyled4 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["14"], {
  "borderTopColor": theme.backgroundFocus.get(),
  "borderRightColor": theme.backgroundFocus.get(),
  "borderBottomColor": theme.backgroundFocus.get(),
  "borderLeftColor": theme.backgroundFocus.get()
}]);
const _ReactNativeTextStyled5 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["15"], {
  "color": theme.color.get()
}]);
const _ReactNativeViewStyled6 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["16"], {
  "borderTopColor": theme.backgroundFocus.get(),
  "borderRightColor": theme.backgroundFocus.get(),
  "borderBottomColor": theme.backgroundFocus.get(),
  "borderLeftColor": theme.backgroundFocus.get()
}]);
const _ReactNativeTextStyled7 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["18"], {
  "color": theme.color.get()
}]);"
`;

exports[`Package.json exports support > should build app package for both web and native targets > web-css 1`] = `
":root ._pos-relative{position:relative;}
:root ._fd-column{flex-direction:column;}
:root ._gap-c-space-4{gap:var(--c-space-4);}
:root ._fd-row{flex-direction:row;}
:root ._width-10037{width:100%;}
:root ._items-center{align-items:center;}
:root ._z-10{z-index:10;}
:root ._pos-absolute{position:absolute;}
:root ._r-0px{right:0px;}
:root ._t-0px{top:0px;}
:root ._b-0px{bottom:0px;}
:root ._justify-center{justify-content:center;}
:root ._width-c-size-4{width:var(--c-size-4);}
:root ._pe-none{pointer-events:none !important;}
:root ._grow-1{flex-grow:1;}
:root ._shrink-1{flex-shrink:1;}
:root ._fb-auto{flex-basis:auto;}
:root ._gap-c-space-8{gap:var(--c-space-8);}
:root ._pt-c-space-4{padding-top:var(--c-space-4);}
:root ._pr-c-space-4{padding-right:var(--c-space-4);}
:root ._pb-c-space-4{padding-bottom:var(--c-space-4);}
:root ._pl-c-space-4{padding-left:var(--c-space-4);}
:root ._bg-background{background-color:var(--background);}
:root ._t-c-space-6{top:var(--c-space-6);}
:root ._gap-c-space-6{gap:var(--c-space-6);}
:root ._fwr-wrap{flex-wrap:wrap;}
@media (min-width: 640px){:root:root:root:root:root:root:root:root:root:root:root:root:root ._t-_sm_0px{top:0px;}}
@media (min-width: 640px){:root:root:root:root:root:root:root:root:root:root:root:root:root ._pos-_sm_relative{position:relative;}}
:root ._gap-c-space-2{gap:var(--c-space-2);}
:root ._select-auto{user-select:auto;-webkit-user-select:auto;}
:root ._ws-normal{white-space:normal;}
:root ._tt-f-transform1451{text-transform:var(--f-transform-8);}
:root ._ff-f-family{font-family:var(--f-family);}
:root ._fw-f-weight-10{font-weight:var(--f-weight-10);}
:root ._ls-f-letterSpa779312653{letter-spacing:var(--f-letterSpacing-10);}
:root ._fs-f-size-10{font-size:var(--f-size-10);}
:root ._lh-f-lineHeigh3500568{line-height:var(--f-lineHeight-10);}
:root ._col-color12{color:var(--color12);}
:root ._mt-0px{margin-top:0px;}
:root ._mr-0px{margin-right:0px;}
:root ._mb-0px{margin-bottom:0px;}
:root ._ml-0px{margin-left:0px;}
:root ._text-center{text-align:center;}
:root ._fw-f-weight-4{font-weight:var(--f-weight-4);}
:root ._ls-f-letterSpa1360334202{letter-spacing:var(--f-letterSpacing-4);}
:root ._fs-f-size-4{font-size:var(--f-size-4);}
:root ._lh-f-lineHeigh112923{line-height:var(--f-lineHeight-4);}
:root ._col-color10{color:var(--color10);}
:root ._btc-backgroundF3405682._btc-backgroundF3405682{border-top-color:var(--backgroundFocus);}
:root ._brc-backgroundF3405682._brc-backgroundF3405682{border-right-color:var(--backgroundFocus);}
:root ._borderBottomColor-backgroundF3405682._borderBottomColor-backgroundF3405682{border-bottom-color:var(--backgroundFocus);}
:root ._borderLeftColor-backgroundF3405682._borderLeftColor-backgroundF3405682{border-left-color:var(--backgroundFocus);}
:root ._btw-0px._btw-0px{border-top-width:0px;}
:root ._brw-0px._brw-0px{border-right-width:0px;}
:root ._borderBottomWidth-1px._borderBottomWidth-1px{border-bottom-width:1px;}
:root ._borderLeftWidth-0px._borderLeftWidth-0px{border-left-width:0px;}
:root ._height-0px{height:0px;}
:root ._maxH-0px{max-height:0px;}
:root ._bbs-solid._bbs-solid{border-bottom-style:solid;}
:root ._bts-solid._bts-solid{border-top-style:solid;}
:root ._bls-solid._bls-solid{border-left-style:solid;}
:root ._brs-solid._brs-solid{border-right-style:solid;}
:root ._tr-translateY-1736186894{transform:translateY(-0.5px);}
:root ._col-color{color:var(--color);}"
`;

exports[`Package.json exports support > should build app package for both web and native targets > web-optimized 1`] = `
"import "./_screen.css"
const _cn15 = "is_Paragraph is_Text font_body _ff-f-family _fw-f-weight-4 _ls-f-letterSpa1360334202 _fs-f-size-4 _lh-f-lineHeigh112923 _col-color _select-auto _ws-normal _text-center ";
const _cn14 = "is_View _pos-relative _fd-row _gap-c-space-2 ";
const _cn13 = "is_Separator is_View _btc-backgroundF3405682 _brc-backgroundF3405682 _borderBottomColor-backgroundF3405682 _borderLeftColor-backgroundF3405682 _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-auto _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _tr-translateY-1736186894 ";
const _cn12 = "is_Paragraph is_Text font_body _ff-f-family _fw-f-weight-4 _ls-f-letterSpa1360334202 _fs-f-size-4 _lh-f-lineHeigh112923 _col-color _select-auto _ws-normal _text-center ";
const _cn11 = "is_Separator is_View _btc-backgroundF3405682 _brc-backgroundF3405682 _borderBottomColor-backgroundF3405682 _borderLeftColor-backgroundF3405682 _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-auto _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _tr-translateY-1736186894 ";
const _cn10 = "is_Paragraph is_Text font_body _ff-f-family _fw-f-weight-4 _ls-f-letterSpa1360334202 _fs-f-size-4 _lh-f-lineHeigh112923 _col-color10 _select-auto _ws-normal _text-center ";
const _cn1 = "is_H1 is_Text font_heading _select-auto _ws-normal _tt-f-transform1451 _ff-f-family _fw-f-weight-10 _ls-f-letterSpa779312653 _fs-f-size-10 _lh-f-lineHeigh3500568 _col-color12 _mt-0px _mr-0px _mb-0px _ml-0px _text-center ";
const _cn0 = "is_View _pos-relative _fd-column _gap-c-space-4 ";
const _cn9 = "is_View _pos-relative _fd-row _gap-c-space-2 ";
const _cn8 = "is_View _fd-row _pos-absolute _width-10037 _t-c-space-6 _gap-c-space-6 _justify-center _fwr-wrap _t-_sm_0px _pos-_sm_relative ";
const _cn7 = "is_View _pos-relative _fd-column _grow-1 _shrink-1 _fb-auto _justify-center _items-center _gap-c-space-8 _pt-c-space-4 _pr-c-space-4 _pb-c-space-4 _pl-c-space-4 _bg-background ";
const _cn6 = "is_View _pos-relative _fd-column _z-10 ";
const _cn5 = "is_View _fd-column _pos-absolute _r-0px _t-0px _b-0px _items-center _justify-center _width-c-size-4 _pe-none ";
const _cn4 = "is_View _pos-relative _fd-column _z-10 ";
const _cn3 = "is_View _pos-relative _fd-row _width-10037 _items-center _gap-c-space-4 ";
const _cn2 = "is_View _pos-relative _fd-row _width-10037 _items-center _gap-c-space-4 ";
const _cn = "is_View _pos-relative _fd-column _gap-c-space-4 ";
import { Adapt, Anchor, Button, type FontSizeTokens, getFontSize, H1, Label, Paragraph, Select, type SelectProps, Separator, Sheet, toast, XStack, YStack } from '@my/ui';
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton';
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton';
import { LinearGradient } from '@tamagui/linear-gradient';
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons';
import React, { useState } from 'react';
import { Platform } from 'react-native';
import { useLink } from 'solito/navigation';
export function SelectDemo() {
  return <div className={_cn}>
      <div className={_cn2}>
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className={_cn3}>
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>;
}
export function SelectDemoItem(props: SelectProps & {
  trigger?: React.ReactNode;
}) {
  const [val, setVal] = React.useState('apple');
  return <Select value={val} onValueChange={setVal} disablePreventBodyScroll {...props}>
      {props?.trigger || <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Frame>
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Frame>
          <Sheet.Overlay backgroundColor="$shadowColor" transition="lazy" enterStyle={{
          opacity: 0
        }} exitStyle={{
          opacity: 0
        }} />
        </Sheet>
      </Adapt>

      <Select.Content zIndex={200000}>
        <Select.ScrollUpButton items="center" justify="center" position="relative" width="100%" height="$3">
          <div className={_cn4}>
            <ChevronUp size={20} />
          </div>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['$background', 'transparent']} />
        </Select.ScrollUpButton>

        <Select.Viewport
      // to do animations:
      // transition="quick"
      // animateOnly={['transform', 'opacity']}
      // enterStyle={{ o: 0, y: -10 }}
      // exitStyle={{ o: 0, y: 10 }}
      minW={200}>
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(() => items.map((item, i) => {
            return <Select.Item index={i} key={item.name} value={item.name.toLowerCase()}>
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>;
          }), [items])}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && <div className={_cn5}>
              <ChevronDown size={getFontSize(props.size as FontSizeTokens ?? '$true')} />
            </div>}
        </Select.Viewport>

        <Select.ScrollDownButton items="center" justify="center" position="relative" width="100%" height="$3">
          <div className={_cn6}>
            <ChevronDown size={20} />
          </div>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['transparent', '$background']} />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>;
}
const items = [{
  name: 'Apple'
}, {
  name: 'Pear'
}, {
  name: 'Blackberry'
}, {
  name: 'Peach'
}, {
  name: 'Apricot'
}, {
  name: 'Melon'
}, {
  name: 'Honeydew'
}, {
  name: 'Starfruit'
}, {
  name: 'Blueberry'
}, {
  name: 'Raspberry'
}, {
  name: 'Strawberry'
}, {
  name: 'Mango'
}, {
  name: 'Pineapple'
}, {
  name: 'Lime'
}, {
  name: 'Lemon'
}, {
  name: 'Coconut'
}, {
  name: 'Guava'
}, {
  name: 'Papaya'
}, {
  name: 'Orange'
}, {
  name: 'Grape'
}, {
  name: 'Jackfruit'
}, {
  name: 'Durian'
}];
export function HomeScreen({
  pagesMode = false
}: {
  pagesMode?: boolean;
}) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user';
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`
  });
  return <div className={_cn7}>
      <div className={_cn8}>
        {Platform.OS === 'web' && <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>}
      </div>

      <SelectDemo />

      <div className={_cn9}>
        <Button size="$3" iconAfter={<Button.Icon>
              <Activity />
            </Button.Icon>}>
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className={_cn0}>
        <h1 className={_cn1}>
          Welcome to Tamagui.
        </h1>
        <p className={_cn10}>
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className={_cn11} />
        <p className={_cn12}>
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className={_cn13} />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>;
}
function SheetDemo() {
  const [open, setOpen] = useState(false);
  const [position, setPosition] = useState(0);
  return <>
      <Button size="$6" icon={open ? ChevronDown : ChevronUp} circular onPress={() => setOpen(x => !x)} />
      <Sheet modal transition="medium" open={open} onOpenChange={setOpen} snapPoints={[80]} position={position} onPositionChange={setPosition} dismissOnSnapToBottom>
        <Sheet.Overlay bg="$shadow4" transition="lazy" enterStyle={{
        opacity: 0
      }} exitStyle={{
        opacity: 0
      }} />
        <Sheet.Handle bg="$color8" />
        <Sheet.Frame items="center" justify="center" gap="$10" bg="$color2">
          <div className={_cn14}>
            <p className={_cn15}>Made by</p>
            <Anchor color="$blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor color="$blue10" href="https://github.com/tamagui/tamagui" target="_blank" rel="noreferrer">
              give it a ⭐️
            </Anchor>
          </div>

          <Button size="$6" circular icon={ChevronDown} onPress={() => {
          setOpen(false);
          toast('Sheet closed!', {
            description: 'Just showing how toast works...'
          });
        }} />
        </Sheet.Frame>
      </Sheet>
    </>;
}"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > native-optimized-single 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  "0": {
    "position": "relative",
    "flexDirection": "column",
    "gap": 18
  },
  "1": {
    "position": "relative",
    "flexDirection": "row",
    "width": "100%",
    "alignItems": "center",
    "gap": 18
  },
  "2": {
    "position": "relative",
    "flexDirection": "row",
    "width": "100%",
    "alignItems": "center",
    "gap": 18
  },
  "3": {
    "position": "relative",
    "flexDirection": "column",
    "zIndex": 10
  },
  "4": {
    "flexDirection": "column",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "bottom": 0,
    "alignItems": "center",
    "justifyContent": "center",
    "width": 44
  },
  "5": {
    "position": "relative",
    "flexDirection": "column",
    "zIndex": 10
  },
  "6": {
    "position": "relative",
    "flexDirection": "column",
    "flex": 1,
    "justifyContent": "center",
    "alignItems": "center",
    "gap": 46,
    "paddingTop": 18,
    "paddingRight": 18,
    "paddingBottom": 18,
    "paddingLeft": 18
  },
  "7": {
    "flexDirection": "row",
    "position": "absolute",
    "width": "100%",
    "top": 32,
    "gap": 32,
    "justifyContent": "center",
    "flexWrap": "wrap"
  },
  "8": {
    "top": 0,
    "position": "relative"
  },
  "9": {},
  "10": {
    "position": "relative",
    "flexDirection": "row",
    "gap": 7
  },
  "11": {
    "position": "relative",
    "flexDirection": "column",
    "gap": 18
  },
  "12": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 64.39999999999999,
    "lineHeight": 74.39999999999999,
    "marginTop": 0,
    "marginRight": 0,
    "marginBottom": 0,
    "marginLeft": 0,
    "textAlign": "center"
  },
  "13": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 14,
    "lineHeight": 24,
    "textAlign": "center"
  },
  "14": {
    "flexShrink": 0,
    "borderTopWidth": 0,
    "borderRightWidth": 0,
    "borderBottomWidth": 1,
    "borderLeftWidth": 0,
    "flex": 1,
    "height": 0,
    "maxHeight": 0,
    "borderStyle": "solid",
    "transform": [{
      "translateY": -0.5
    }]
  },
  "15": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 14,
    "lineHeight": 24,
    "textAlign": "center"
  },
  "16": {
    "flexShrink": 0,
    "borderTopWidth": 0,
    "borderRightWidth": 0,
    "borderBottomWidth": 1,
    "borderLeftWidth": 0,
    "flex": 1,
    "height": 0,
    "maxHeight": 0,
    "borderStyle": "solid",
    "transform": [{
      "translateY": -0.5
    }]
  },
  "17": {
    "position": "relative",
    "flexDirection": "row",
    "gap": 7
  },
  "18": {
    "fontFamily": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif",
    "fontWeight": "300",
    "letterSpacing": 0,
    "fontSize": 14,
    "lineHeight": 24,
    "textAlign": "center"
  }
});
import { _withStableStyle } from '@tamagui/core';
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { Adapt, Anchor, Button, type FontSizeTokens, getFontSize, H1, Label, Paragraph, Select, type SelectProps, Separator, Sheet, toast, XStack, YStack } from '@my/ui';
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton';
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton';
import { LinearGradient } from '@tamagui/linear-gradient';
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons';
import React, { useState } from 'react';
import { Platform } from 'react-native';
import { useLink } from 'solito/navigation';
export function SelectDemo() {
  return <__ReactNativeView style={_sheet["0"]}>
      <__ReactNativeView style={_sheet["1"]}>
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__ReactNativeView>

      <__ReactNativeView style={_sheet["2"]}>
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__ReactNativeView>
    </__ReactNativeView>;
}
export function SelectDemoItem(props: SelectProps & {
  trigger?: React.ReactNode;
}) {
  const [val, setVal] = React.useState('apple');
  return <Select value={val} onValueChange={setVal} disablePreventBodyScroll {...props}>
      {props?.trigger || <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Frame>
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Frame>
          <Sheet.Overlay backgroundColor="$shadowColor" transition="lazy" enterStyle={{
          opacity: 0
        }} exitStyle={{
          opacity: 0
        }} />
        </Sheet>
      </Adapt>

      <Select.Content zIndex={200000}>
        <Select.ScrollUpButton items="center" justify="center" position="relative" width="100%" height="$3">
          <__ReactNativeView style={_sheet["3"]}>
            <ChevronUp size={20} />
          </__ReactNativeView>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['$background', 'transparent']} />
        </Select.ScrollUpButton>

        <Select.Viewport
      // to do animations:
      // transition="quick"
      // animateOnly={['transform', 'opacity']}
      // enterStyle={{ o: 0, y: -10 }}
      // exitStyle={{ o: 0, y: 10 }}
      minW={200}>
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(() => items.map((item, i) => {
            return <Select.Item index={i} key={item.name} value={item.name.toLowerCase()}>
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>;
          }), [items])}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && <__ReactNativeView pointerEvents={"none"} style={_sheet["4"]}>
              <ChevronDown size={getFontSize(props.size as FontSizeTokens ?? '$true')} />
            </__ReactNativeView>}
        </Select.Viewport>

        <Select.ScrollDownButton items="center" justify="center" position="relative" width="100%" height="$3">
          <__ReactNativeView style={_sheet["5"]}>
            <ChevronDown size={20} />
          </__ReactNativeView>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['transparent', '$background']} />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>;
}
const items = [{
  name: 'Apple'
}, {
  name: 'Pear'
}, {
  name: 'Blackberry'
}, {
  name: 'Peach'
}, {
  name: 'Apricot'
}, {
  name: 'Melon'
}, {
  name: 'Honeydew'
}, {
  name: 'Starfruit'
}, {
  name: 'Blueberry'
}, {
  name: 'Raspberry'
}, {
  name: 'Strawberry'
}, {
  name: 'Mango'
}, {
  name: 'Pineapple'
}, {
  name: 'Lime'
}, {
  name: 'Lemon'
}, {
  name: 'Coconut'
}, {
  name: 'Guava'
}, {
  name: 'Papaya'
}, {
  name: 'Orange'
}, {
  name: 'Grape'
}, {
  name: 'Jackfruit'
}, {
  name: 'Durian'
}];
export function HomeScreen({
  pagesMode = false
}: {
  pagesMode?: boolean;
}) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user';
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`
  });
  return <_ReactNativeViewStyled0>
      <_ReactNativeViewStyled1 _expressions={["sm"]}>
        {Platform.OS === 'web' && <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>}
      </_ReactNativeViewStyled1>

      <SelectDemo />

      <__ReactNativeView style={_sheet["10"]}>
        <Button size="$3" iconAfter={<Button.Icon>
              <Activity />
            </Button.Icon>}>
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__ReactNativeView>
      <__ReactNativeView style={_sheet["11"]}>
        <_ReactNativeTextStyled2>
          Welcome to Tamagui.
        </_ReactNativeTextStyled2>
        <_ReactNativeTextStyled3>
          Here's a basic starter to show navigating from one screen to another.
        </_ReactNativeTextStyled3>
        <_ReactNativeViewStyled4 />
        <_ReactNativeTextStyled5>
          This screen uses the same code on Next.js and React Native.
        </_ReactNativeTextStyled5>
        <_ReactNativeViewStyled6 />
      </__ReactNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </_ReactNativeViewStyled0>;
}
function SheetDemo() {
  const [open, setOpen] = useState(false);
  const [position, setPosition] = useState(0);
  return <>
      <Button size="$6" icon={open ? ChevronDown : ChevronUp} circular onPress={() => setOpen(x => !x)} />
      <Sheet modal transition="medium" open={open} onOpenChange={setOpen} snapPoints={[80]} position={position} onPositionChange={setPosition} dismissOnSnapToBottom>
        <Sheet.Overlay bg="$shadow4" transition="lazy" enterStyle={{
        opacity: 0
      }} exitStyle={{
        opacity: 0
      }} />
        <Sheet.Handle bg="$color8" />
        <Sheet.Frame items="center" justify="center" gap="$10" bg="$color2">
          <__ReactNativeView style={_sheet["17"]}>
            <_ReactNativeTextStyled7>Made by</_ReactNativeTextStyled7>
            <Anchor color="$blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor color="$blue10" href="https://github.com/tamagui/tamagui" target="_blank" rel="noreferrer">
              give it a ⭐️
            </Anchor>
          </__ReactNativeView>

          <Button size="$6" circular icon={ChevronDown} onPress={() => {
          setOpen(false);
          toast('Sheet closed!', {
            description: 'Just showing how toast works...'
          });
        }} />
        </Sheet.Frame>
      </Sheet>
    </>;
}
const _ReactNativeViewStyled0 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["6"], {
  "backgroundColor": theme.background.get()
}]);
const _ReactNativeViewStyled1 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["7"], _expressions[0] ? _sheet["8"] : _sheet["9"]]);
const _ReactNativeTextStyled2 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["12"], {
  "color": theme.color12.get()
}]);
const _ReactNativeTextStyled3 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["13"], {
  "color": theme.color10.get()
}]);
const _ReactNativeViewStyled4 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["14"], {
  "borderTopColor": theme.backgroundFocus.get(),
  "borderRightColor": theme.backgroundFocus.get(),
  "borderBottomColor": theme.backgroundFocus.get(),
  "borderLeftColor": theme.backgroundFocus.get()
}]);
const _ReactNativeTextStyled5 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["15"], {
  "color": theme.color.get()
}]);
const _ReactNativeViewStyled6 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["16"], {
  "borderTopColor": theme.backgroundFocus.get(),
  "borderRightColor": theme.backgroundFocus.get(),
  "borderBottomColor": theme.backgroundFocus.get(),
  "borderLeftColor": theme.backgroundFocus.get()
}]);
const _ReactNativeTextStyled7 = _withStableStyle(__ReactNativeText, (theme, _expressions) => [_sheet["18"], {
  "color": theme.color.get()
}]);"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > web-optimized-single 1`] = `
"import "./_screen.css"
const _cn15 = "is_Paragraph is_Text font_body _ff-f-family _fw-f-weight-4 _ls-f-letterSpa1360334202 _fs-f-size-4 _lh-f-lineHeigh112923 _col-color _select-auto _ws-normal _text-center ";
const _cn14 = "is_View _pos-relative _fd-row _gap-c-space-2 ";
const _cn13 = "is_Separator is_View _btc-backgroundF3405682 _brc-backgroundF3405682 _borderBottomColor-backgroundF3405682 _borderLeftColor-backgroundF3405682 _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-auto _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _tr-translateY-1736186894 ";
const _cn12 = "is_Paragraph is_Text font_body _ff-f-family _fw-f-weight-4 _ls-f-letterSpa1360334202 _fs-f-size-4 _lh-f-lineHeigh112923 _col-color _select-auto _ws-normal _text-center ";
const _cn11 = "is_Separator is_View _btc-backgroundF3405682 _brc-backgroundF3405682 _borderBottomColor-backgroundF3405682 _borderLeftColor-backgroundF3405682 _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-auto _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _tr-translateY-1736186894 ";
const _cn10 = "is_Paragraph is_Text font_body _ff-f-family _fw-f-weight-4 _ls-f-letterSpa1360334202 _fs-f-size-4 _lh-f-lineHeigh112923 _col-color10 _select-auto _ws-normal _text-center ";
const _cn1 = "is_H1 is_Text font_heading _select-auto _ws-normal _tt-f-transform1451 _ff-f-family _fw-f-weight-10 _ls-f-letterSpa779312653 _fs-f-size-10 _lh-f-lineHeigh3500568 _col-color12 _mt-0px _mr-0px _mb-0px _ml-0px _text-center ";
const _cn0 = "is_View _pos-relative _fd-column _gap-c-space-4 ";
const _cn9 = "is_View _pos-relative _fd-row _gap-c-space-2 ";
const _cn8 = "is_View _fd-row _pos-absolute _width-10037 _t-c-space-6 _gap-c-space-6 _justify-center _fwr-wrap _t-_sm_0px _pos-_sm_relative ";
const _cn7 = "is_View _pos-relative _fd-column _grow-1 _shrink-1 _fb-auto _justify-center _items-center _gap-c-space-8 _pt-c-space-4 _pr-c-space-4 _pb-c-space-4 _pl-c-space-4 _bg-background ";
const _cn6 = "is_View _pos-relative _fd-column _z-10 ";
const _cn5 = "is_View _fd-column _pos-absolute _r-0px _t-0px _b-0px _items-center _justify-center _width-c-size-4 _pe-none ";
const _cn4 = "is_View _pos-relative _fd-column _z-10 ";
const _cn3 = "is_View _pos-relative _fd-row _width-10037 _items-center _gap-c-space-4 ";
const _cn2 = "is_View _pos-relative _fd-row _width-10037 _items-center _gap-c-space-4 ";
const _cn = "is_View _pos-relative _fd-column _gap-c-space-4 ";
import { Adapt, Anchor, Button, type FontSizeTokens, getFontSize, H1, Label, Paragraph, Select, type SelectProps, Separator, Sheet, toast, XStack, YStack } from '@my/ui';
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton';
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton';
import { LinearGradient } from '@tamagui/linear-gradient';
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons';
import React, { useState } from 'react';
import { Platform } from 'react-native';
import { useLink } from 'solito/navigation';
export function SelectDemo() {
  return <div className={_cn}>
      <div className={_cn2}>
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className={_cn3}>
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>;
}
export function SelectDemoItem(props: SelectProps & {
  trigger?: React.ReactNode;
}) {
  const [val, setVal] = React.useState('apple');
  return <Select value={val} onValueChange={setVal} disablePreventBodyScroll {...props}>
      {props?.trigger || <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Frame>
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Frame>
          <Sheet.Overlay backgroundColor="$shadowColor" transition="lazy" enterStyle={{
          opacity: 0
        }} exitStyle={{
          opacity: 0
        }} />
        </Sheet>
      </Adapt>

      <Select.Content zIndex={200000}>
        <Select.ScrollUpButton items="center" justify="center" position="relative" width="100%" height="$3">
          <div className={_cn4}>
            <ChevronUp size={20} />
          </div>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['$background', 'transparent']} />
        </Select.ScrollUpButton>

        <Select.Viewport
      // to do animations:
      // transition="quick"
      // animateOnly={['transform', 'opacity']}
      // enterStyle={{ o: 0, y: -10 }}
      // exitStyle={{ o: 0, y: 10 }}
      minW={200}>
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(() => items.map((item, i) => {
            return <Select.Item index={i} key={item.name} value={item.name.toLowerCase()}>
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>;
          }), [items])}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && <div className={_cn5}>
              <ChevronDown size={getFontSize(props.size as FontSizeTokens ?? '$true')} />
            </div>}
        </Select.Viewport>

        <Select.ScrollDownButton items="center" justify="center" position="relative" width="100%" height="$3">
          <div className={_cn6}>
            <ChevronDown size={20} />
          </div>
          <LinearGradient start={[0, 0]} end={[0, 1]} fullscreen colors={['transparent', '$background']} />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>;
}
const items = [{
  name: 'Apple'
}, {
  name: 'Pear'
}, {
  name: 'Blackberry'
}, {
  name: 'Peach'
}, {
  name: 'Apricot'
}, {
  name: 'Melon'
}, {
  name: 'Honeydew'
}, {
  name: 'Starfruit'
}, {
  name: 'Blueberry'
}, {
  name: 'Raspberry'
}, {
  name: 'Strawberry'
}, {
  name: 'Mango'
}, {
  name: 'Pineapple'
}, {
  name: 'Lime'
}, {
  name: 'Lemon'
}, {
  name: 'Coconut'
}, {
  name: 'Guava'
}, {
  name: 'Papaya'
}, {
  name: 'Orange'
}, {
  name: 'Grape'
}, {
  name: 'Jackfruit'
}, {
  name: 'Durian'
}];
export function HomeScreen({
  pagesMode = false
}: {
  pagesMode?: boolean;
}) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user';
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`
  });
  return <div className={_cn7}>
      <div className={_cn8}>
        {Platform.OS === 'web' && <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>}
      </div>

      <SelectDemo />

      <div className={_cn9}>
        <Button size="$3" iconAfter={<Button.Icon>
              <Activity />
            </Button.Icon>}>
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className={_cn0}>
        <h1 className={_cn1}>
          Welcome to Tamagui.
        </h1>
        <p className={_cn10}>
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className={_cn11} />
        <p className={_cn12}>
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className={_cn13} />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>;
}
function SheetDemo() {
  const [open, setOpen] = useState(false);
  const [position, setPosition] = useState(0);
  return <>
      <Button size="$6" icon={open ? ChevronDown : ChevronUp} circular onPress={() => setOpen(x => !x)} />
      <Sheet modal transition="medium" open={open} onOpenChange={setOpen} snapPoints={[80]} position={position} onPositionChange={setPosition} dismissOnSnapToBottom>
        <Sheet.Overlay bg="$shadow4" transition="lazy" enterStyle={{
        opacity: 0
      }} exitStyle={{
        opacity: 0
      }} />
        <Sheet.Handle bg="$color8" />
        <Sheet.Frame items="center" justify="center" gap="$10" bg="$color2">
          <div className={_cn14}>
            <p className={_cn15}>Made by</p>
            <Anchor color="$blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor color="$blue10" href="https://github.com/tamagui/tamagui" target="_blank" rel="noreferrer">
              give it a ⭐️
            </Anchor>
          </div>

          <Button size="$6" circular icon={ChevronDown} onPress={() => {
          setOpen(false);
          toast('Sheet closed!', {
            description: 'Just showing how toast works...'
          });
        }} />
        </Sheet.Frame>
      </Sheet>
    </>;
}"
`;
